--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,22 @@
         </resources>
         <plugins>
             <plugin>
+                <groupId>org.cloudfoundry</groupId>
+                <artifactId>cf-maven-plugin</artifactId>
+                <version>1.1.3</version>
+                <configuration>
+                    <target>https://api.cronapp.io</target>
+                    <org>rodrigo.neri@techne.com.br</org>
+                    <space>develop</space>
+                    <appname>parceiroscronapp</appname>
+                    <url>parceiroscronapp.cronapp.io</url>
+                    <instances>1</instances>
+                    <memory>768</memory>
+                    <username/>
+                    <password/>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
@@ -86,11 +102,6 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.187</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -167,6 +178,11 @@
             <groupId>io.cronapp</groupId>
             <artifactId>cronapi-java</artifactId>
             <version>0.0.57-beta</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.35</version>
         </dependency>
     </dependencies>
     <properties>
